# weaver

./: .coderabbit.yaml  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Makefile  README.md  dylint.toml  pyproject.toml  pyrightconfig.json  rust-toolchain.toml  test_expect  typos.local.toml  typos.toml
crates/sempai/: Cargo.toml
crates/sempai-core/: Cargo.toml
crates/sempai-core/src/: capture.rs  config.rs  diagnostic.rs  formula.rs  language.rs  lib.rs  match_result.rs  span.rs  test_support.rs
crates/sempai-core/src/tests/: behaviour.rs  capture_tests.rs  config_tests.rs  diagnostic_snapshot_tests.rs  diagnostic_tests.rs  formula_tests.rs  language_tests.rs  match_tests.rs  mod.rs  span_tests.rs
crates/sempai-core/tests/features/: sempai_core.feature
crates/sempai-yaml/: Cargo.toml
crates/sempai-yaml/src/: lib.rs  model.rs  parser.rs  project_depends_on.rs  raw.rs  source_map.rs
crates/sempai-yaml/src/parser/: builders.rs  mod.rs
crates/sempai-yaml/src/tests/: behaviour.rs  mod.rs  parser_tests.rs  taint_tests.rs  test_helpers.rs
crates/sempai-yaml/tests/features/: sempai_yaml.feature
crates/sempai/src/: engine.rs  lib.rs  mode_validation.rs  normalize.rs  normalize_constraints.rs  normalize_trace.rs  semantic_check.rs  validate.rs  where_clause.rs
crates/sempai/src/normalise/: constraints.rs  legacy.rs  mod.rs  v2.rs
crates/sempai/src/tests/: behaviour.rs  constraint_tests.rs  constraint_walker_proptest.rs  diagnostic_snapshot_tests.rs  engine_integration_tests.rs  engine_tests.rs  mod.rs  normalise_tests.rs  normalization_constraint_tests.rs  normalization_metadata_tests.rs  normalization_tests.rs  normalize_tests.rs  property_tests.rs  reexport_tests.rs  semantic_validation_tests.rs  tracing_tests.rs
crates/sempai/src/where_clause/: metavariable.rs  mod.rs
crates/sempai/tests/features/: formula_normalization.feature  sempai_engine.feature
crates/weaver-cards/: Cargo.toml
crates/weaver-cards/src/: cache.rs  card.rs  detail.rs  error.rs  lib.rs  request.rs  response.rs  symbol.rs  timestamp.rs
crates/weaver-cards/src/extract/: attachments.rs  candidates.rs  fingerprint.rs  mod.rs  positions.rs  state.rs  utils.rs
crates/weaver-cards/src/graph_slice/: budget.rs  mod.rs  parse.rs  parse_helpers.rs  parse_helpers_tests.rs  request.rs  request_tests.rs  response.rs
crates/weaver-cards/src/tests/: behaviour.rs  cache_behaviour.rs  cache_tests.rs  extractor.rs  extractor_boundaries.rs  fixtures.rs  graph_slice_behaviour.rs  graph_slice_fixtures.rs  graph_slice_snapshot_tests.rs  mod.rs  round_trip_tests.rs  snapshot_tests.rs  test_utils.rs
crates/weaver-cards/tests/features/: card_cache.feature  get_card_schema.feature  graph_slice_schema.feature
crates/weaver-cli/: Cargo.toml  build.rs
crates/weaver-cli/locales/en-US/: messages.ftl
crates/weaver-cli/src/: actionable_guidance.rs  cli.rs  command.rs  command_surface.rs  config.rs  daemon_output.rs  discoverability.rs  errors.rs  help.rs  lib.rs  lifecycle.rs  localizer.rs  main.rs  preflight.rs  runner_glue.rs  runtime_utils.rs  tests.rs  transport.rs
crates/weaver-cli/src/discoverability/: fluent_entries.rs
crates/weaver-cli/src/lifecycle/: controller.rs  error.rs  mod.rs  monitoring.rs  monitoring_readers.rs  monitoring_tests.rs  shutdown.rs  shutdown_tests.rs  socket.rs  spawning.rs  types.rs  utils.rs
crates/weaver-cli/src/output/: mod.rs  models.rs  render.rs  source.rs
crates/weaver-cli/src/tests/: behaviour.rs  mod.rs  support.rs  unit.rs
crates/weaver-cli/tests/: main_entry.rs
crates/weaver-cli/tests/features/: weaver_cli.feature  weaver_cli_output.feature  weaver_cli_version.feature
crates/weaver-cli/tests/golden/: capabilities_force_python.json  (+3 more)
crates/weaver-config/: Cargo.toml
crates/weaver-config/src/: capability.rs  defaults.rs  lib.rs  locale.rs  logging.rs  runtime.rs  socket.rs
crates/weaver-config/tests/: configuration_failfast.rs  configuration_precedence.rs
crates/weaver-docs-gate/: Cargo.toml
crates/weaver-docs-gate/examples/: render_boundary_matrix.rs
crates/weaver-docs-gate/src/: lib.rs  manifest_adapter.rs  renderer.rs
crates/weaver-docs-gate/tests/: boundary_manifest.rs  compile_time.rs  load_manifest.rs
crates/weaver-e2e/: Cargo.toml
crates/weaver-e2e/src/: fixtures.rs  jsonrpc.rs  lib.rs  lsp_client.rs  pyrefly.rs
crates/weaver-e2e/tests/: call_hierarchy.rs  definition_snapshots.rs  get_card_snapshots.rs  graph_slice_snapshots.rs  grep_snapshots.rs  human_output.rs  refactor_rope_cli_snapshots.rs  refactor_rust_analyzer_cli_snapshots.rs  rewrite_snapshots.rs  weaver_graph.rs
crates/weaver-graph/: Cargo.toml
crates/weaver-graph/src/: edge.rs  error.rs  graph.rs  lib.rs  node.rs  provider.rs  tests.rs  uri.rs
crates/weaver-lsp-host/: Cargo.toml
crates/weaver-lsp-host/docs/: did_change.md  did_close.md  did_open.md  language_server_did_change.md  language_server_did_close.md  language_server_did_open.md  language_server_trait.md
crates/weaver-lsp-host/src/: capability.rs  doc_support.rs  errors.rs  host.rs  language.rs  lib.rs  server.rs
crates/weaver-plugin-rope/: Cargo.toml
crates/weaver-plugin-rope/src/: arguments.rs  lib.rs  main.rs  workspace_fs.rs
crates/weaver-plugin-rust-analyzer/: Cargo.toml
crates/weaver-plugin-rust-analyzer/src/: arguments.rs  failure.rs  fs_helpers.rs  lib.rs  main.rs  path_utils.rs
crates/weaver-plugins/: Cargo.toml
crates/weaver-plugins/src/: lib.rs  process.rs
crates/weaver-sandbox/: Cargo.toml
crates/weaver-sandbox/src/: env_guard.rs  error.rs  lib.rs  profile.rs  runtime.rs  sandbox.rs
crates/weaver-syntax/: Cargo.toml
crates/weaver-syntax/src/: error.rs  language.rs  lib.rs  matcher.rs  metavariables.rs  parser.rs  pattern.rs  position.rs  rewriter.rs  syntactic_lock.rs
crates/weaver-syntax/tests/: e2e.rs
crates/weaverd/: Cargo.toml  build.rs
crates/weaverd/src/: backends.rs  bootstrap.rs  cap_fs.rs  health.rs  lib.rs  main.rs  placeholder_provider.rs  process.rs  semantic_provider.rs  telemetry.rs
crates/weaverd/tests/: lint_compliance.rs
(+640 files in other folders)
