[workspace]
members = [
    "crates/weaver-cli",
    "crates/weaver-config",
    "crates/weaverd",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
ortho_config = "0.5.0"
rstest = "0.23"
rstest-bdd = "0.1.0-alpha4"
rstest-bdd-macros = "0.1.0-alpha4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tempfile = "3.10"
dirs = "6.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
blanket_clippy_restriction_lints = "deny"

# 2. debugging leftovers
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# 3. panic-prone operations
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
string_slice = "deny"
integer_division = "deny"
integer_division_remainder_used = "deny"

# 4. portability
host_endian_bytes = "deny"
little_endian_bytes = "deny"
big_endian_bytes = "deny"

# 5. nursery idiom polish
or_fun_call = "deny"
option_if_let_else = "deny"
use_self = "deny"
string_lit_as_bytes = "deny"

# 6. numerical foot-guns
float_arithmetic = "deny"
