[project]
name = "weaver"
version = "0.1.0"
description = "weaver package"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Payton McIntosh", email = "pmcintosh@df12.net" }]
keywords = ["weaver", "rpc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anyio!=4.9.0,>=4.9.1,<5.0",
    "msgspec>=0.19.0,<1.0",
    "serena-agent==0.1.3",
    "typer>=0.16.0,<1.0",
]

[project.scripts]
weaver = "weaver.cli:app"
weaverd = "weaverd.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff==0.12.7",
    "pyright",
    "pytest-timeout",
    "pytest-bdd>=8.1.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff==0.12.7",
    "pyright",
    "pytest-timeout",
    "pytest-bdd>=8.1.0",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["weaver", "weaver_schemas", "weaverd"]
reportMissingImports = false
reportMissingModuleSource = false

[tool.ruff]
line-length = 88
preview = true

[tool.ruff.lint]
select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "A",        # detect shadowed builtins
    "BLE",      # disallow catch-all exceptions
    "S",        # disallow things like "exec"; also restricts "assert" but I just NOQA it when I really need it
    "DTZ",      # require strict timezone manipulation with datetime
    "FBT",      # detect boolean traps
    "N",        # enforce naming conventions, e.g. ClassName vs function_name
    "ANN",      # Function/method annotations
    "FURB",      # Refurb-style suggestions
    "B",         # Bugbear warnings
    "TRY",      # Exception handling best practices
    "LOG",      # Logging
    "G",        # Log formatting
    "Q",        # Quotes
    "PT",       # PyTest style issues
    "RUF",
]
per-file-ignores = {"**/test_*.py" = ["S101"]}

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = [
    "typing",
    "datetime",
    "collections.abc",
    "dataclasses",
    "enum",
    "unittest.mock",
    "msgspec",
    "msgspec.json",
]

[tool.ruff.lint.flake8-import-conventions.aliases]
# Declare the default aliases.
"collections.abc" = "cabc"
datetime = "dt"
"unittest.mock" = "mock"
msgspec = "ms"
"msgspec.json" = "msjson"
typing = "typ"

[tool.pytest.ini_options]
# Ensure asyncio fixtures create a new event loop for each test
asyncio_default_fixture_loop_scope = "function"
# Tests automatically killed after seconds elapsed
timeout = 30

[tool.uv]
package = true


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["weaver", "weaver.*", "weaver_schemas", "weaver_schemas.*", "weaverd", "weaverd.*"]

