[package]
name = "sempai_yaml"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
sempai_core = { path = "../sempai-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
saphyr = { workspace = true }

[dev-dependencies]
sempai_core = { path = "../sempai-core", features = ["test-support"] }
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
serde_json = { workspace = true }
weaver-test-macros = { path = "../weaver-test-macros" }

[lints]
workspace = true
