[package]
name = "sempai"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
sempai_core = { path = "../sempai-core" }

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
