[package]
name = "sempai"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
sempai_core = { path = "../sempai-core" }
sempai_yaml = { path = "../sempai-yaml" }
serde_json = { workspace = true }

[dev-dependencies]
sempai_core = { path = "../sempai-core", features = ["test-support"] }
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
