[package]
name = "weaver-cards"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
lru = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tree-sitter = { workspace = true }
url = { workspace = true }
weaver-syntax = { path = "../weaver-syntax" }

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
weaver-test-macros = { path = "../weaver-test-macros" }

[lints]
workspace = true
