[package]
name = "weaver-cli"
edition.workspace = true
version.workspace = true

[dependencies]
weaver-config = { path = "../weaver-config", features = ["cli"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
ortho_config = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
