[package]
name = "weaver-config"
edition.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
camino.workspace = true
clap.workspace = true
ortho_config.workspace = true
serde.workspace = true
thiserror.workspace = true
strum = "0.26"
strum_macros = "0.26"
url = "2.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rstest.workspace = true
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true
tempfile.workspace = true
