[package]
name = "weaver-docs-gate"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
cap-std = { workspace = true }
camino = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
