[package]
name = "weaver-e2e"
edition.workspace = true
version.workspace = true

[dependencies]
weaver-graph = { path = "../weaver-graph" }
weaver-lsp-host = { path = "../weaver-lsp-host" }
weaver-syntax = { path = "../weaver-syntax" }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
weaver-cli = { path = "../weaver-cli" }

[lints]
workspace = true
