[package]
name = "weaver-e2e"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
weaver-graph = { path = "../weaver-graph" }
weaver-lsp-host = { path = "../weaver-lsp-host" }
weaver-syntax = { path = "../weaver-syntax" }
lsp-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
cap-std = { workspace = true }
rstest = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
weaver-cli = { path = "../weaver-cli" }
weaver-cards = { path = "../weaver-cards" }
weaver-config = { path = "../weaver-config" }
weaverd = { path = "../weaverd", features = ["test-support"] }
weaver-test-macros = { path = "../weaver-test-macros" }

[lints]
workspace = true
