[package]
name = "weaver-graph"
edition.workspace = true
version.workspace = true

[dependencies]
weaver-lsp-host = { path = "../weaver-lsp-host" }
lsp-types = { workspace = true }
thiserror = { workspace = true }
camino = { workspace = true }
url = "2.5"

[dev-dependencies]
rstest = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
