[package]
name = "weaver-plugin-rope"
edition.workspace = true
version.workspace = true

[dependencies]
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
weaver-plugins = { path = "../weaver-plugins" }

[dev-dependencies]
rstest.workspace = true
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true

[lints]
workspace = true
