[package]
name = "weaver-plugins"
edition.workspace = true
version.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tracing = "0.1"
weaver-sandbox = { path = "../weaver-sandbox" }

[dev-dependencies]
rstest.workspace = true
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true
tempfile.workspace = true

[lints]
workspace = true
