[package]
name = "weaver-syntax"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
rstest = "0.26.1"
rstest-bdd = { workspace = true }
rstest-bdd-macros = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
