[package]
name = "weaverd"
edition.workspace = true
version.workspace = true

[dependencies]
atty = "0.2"
once_cell.workspace = true
ortho_config.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
weaver-config = { path = "../weaver-config", features = ["cli"] }

[dev-dependencies]
rstest.workspace = true
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true
tempfile.workspace = true
