[package]
name = "weaverd"
edition.workspace = true
version.workspace = true

[dependencies]
daemonize-me = "2.0.2"
dirs = "5.0"
nix = { version = "0.28", features = ["signal", "user"] }
once_cell.workspace = true
ortho_config.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
weaver-config = { path = "../weaver-config", features = ["cli"] }
tempfile.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest-bdd.workspace = true
rstest-bdd-macros.workspace = true
